--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
         h1 {
             color: #333;
         }
+        .footer {
+            margin-top: 20px;
+            font-size: 0.9em;
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to BetFamke</h1>
     <p>This is the home page</p>
     <p>Here you can add more content about your website or services.</p>
+    <div class="footer">
+        <a href="privacy.html">Privacy Statement</a>
+    </div>
 </body>
 </html>
