--- a/privacy.html
+++ b/privacy.html
@@ -36,4 +36,13 @@
 <li><p><strong>To provide and maintain our Service</strong>, including to monitor and enhance the app's performance and user experience.</p></li>
 <li><p><strong>To manage Your Account:</strong> to manage Your registration as a user of the Service, ensuring smooth access to different functionalities of the Service that are available to You as a registered user.</p></li>
 <li><p><strong>For customer support:</strong> To address Your requests and support needs in connection with the app.</p></li>
+  <h2>Contact Us</h2>
+<p>If you have any questions about this Privacy Policy, You can contact us:</p>
+<ul>
+<li>
+<p>By email: kirui09@gmail.com</p>
+</li>
+<li>
+<p>By phone number: +254715610432</p>
+<p><a href="index.html">Return to Home Page</a></p>
 </ul>
