--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         .footer a {
             color: #50b3a2;
             text-decoration: none;
+            margin: 0 10px;
         }
     </style>
 </head>
@@ -110,7 +111,7 @@
     </div>
 
     <div class="footer">
-        <a href="privacy.html">Privacy Statement</a> | &copy; 2024 BetFam
+        <a href="privacy.html">Privacy Statement</a> | <a href="terms.html">Terms and Conditions</a> | &copy; 2024 BetFam
     </div>
 </body>
 </html>
