--- a/privacy.html
+++ b/privacy.html
@@ -99,6 +99,39 @@
             <li><strong>To manage Your Account:</strong> to manage Your registration as a user of the Service, ensuring smooth access to different functionalities of the Service that are available to You as a registered user.</li>
             <li><strong>For customer support:</strong> To address Your requests and support needs in connection with the app.</li>
         </ul>
+    <h2>Collecting and Using Your Personal Data</h2>
+        <h3>Types of Data Collected</h3>
+        <h4>Personal Data</h4>
+        <p>While using Our Service, We may ask You to provide Us with certain personally identifiable information that is essential for the app's functionality. Personally identifiable information may include, but is not limited to:</p>
+        <ul>
+            <li>Email address</li>
+            <li>Usage Data</li>
+        </ul>
+
+        <h4>User-Generated Content and Data</h4>
+        <p>Our Service allows You to create and store content within Your Google Drive account. This data remains in Your Google Drive and is not stored on Our servers. We do not have direct access to this data.</p>
+
+        <!-- ... (existing Usage Data section remains unchanged) ... -->
+
+        <h3>Use of Your Personal Data</h3>
+        <p>The Company collects Your Personal Data for the sole purpose of improving and maintaining the app's features and functionality. We do not use Your data for any other purposes outside the app's usage.</p>
+        <!-- ... (existing list items remain unchanged) ... -->
+
+        <h3>Data Protection Mechanisms</h3>
+        <p>We take the protection of Your data seriously. Here are the key data protection mechanisms we employ:</p>
+        <ul>
+            <li><strong>Data Storage:</strong> All user-generated content and sensitive data remain stored in the user's own Google Drive. Our application does not store or host this data on our servers.</li>
+            <li><strong>Access Model:</strong> We use Google's OAuth 2.0 protocol for authentication and authorization. This means users grant our application specific, limited permissions to interact with their Google Drive data.</li>
+            <li><strong>Data Transit:</strong> When our application needs to access or modify user data, all communication happens directly between the user's browser and Google's servers using encrypted HTTPS connections.</li>
+            <li><strong>No Direct Data Handling:</strong> Our servers do not directly receive, process, or store the sensitive data from users' Google Drive accounts. We only receive access tokens that allow our application to perform authorized actions on behalf of the user.</li>
+            <li><strong>Token Security:</strong> We securely store and manage the OAuth access tokens in accordance with industry best practices to prevent unauthorized access.</li>
+            <li><strong>Google's Security:</strong> The data itself is protected by Google's robust security measures for Google Drive, which includes encryption at rest and in transit.</li>
+            <li><strong>Compliance:</strong> We adhere to Google's API Services User Data Policy and regularly review our practices to ensure compliance with data protection regulations.</li>
+        </ul>
+
+        <h3>Third-Party Services</h3>
+        <p>Our Service relies on Google Drive for data storage. Please refer to Google's Privacy Policy for information on how they handle your data:</p>
+        <p><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></p>
 
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
