--- a/privacy.html
+++ b/privacy.html
@@ -132,6 +132,18 @@
         <h3>Third-Party Services</h3>
         <p>Our Service relies on Google Drive for data storage. Please refer to Google's Privacy Policy for information on how they handle your data:</p>
         <p><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></p>
+          <h3>Sharing, Transfer, and Disclosure of Google User Data</h3>
+        <p>We want to clearly state our policy regarding the handling of Google user data:</p>
+        <ul>
+            <li><strong>No Sharing:</strong> We do not share any Google user data with third parties. All user data remains within the user's Google Drive and is not accessible to external entities through our Service.</li>
+            <li><strong>No Transfer:</strong> We do not transfer Google user data to any other platforms or services. The data remains solely within the user's Google Drive account.</li>
+            <li><strong>No Disclosure:</strong> We do not disclose any Google user data to any individuals or organizations. The privacy and confidentiality of your data are of utmost importance to us.</li>
+        </ul>
+        <p>Our application is designed to interact with your Google Drive data solely for the purpose of providing the Service's functionality. We do not have access to, control over, or rights to your Google user data beyond the specific, limited permissions you grant through Google's OAuth 2.0 protocol.</p>
+
+        <h3>Third-Party Services</h3>
+        <p>Our Service relies on Google Drive for data storage. Please refer to Google's Privacy Policy for information on how they handle your data:</p>
+        <p><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></p>
 
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
