--- a/privacy.html
+++ b/privacy.html
@@ -144,16 +144,16 @@
         <h3>Third-Party Services</h3>
         <p>Our Service relies on Google Drive for data storage. Please refer to Google's Privacy Policy for information on how they handle your data:</p>
         <p><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></p>
-           <h3>Retention and Deletion of Google User Data</h3>
+<h3>Retention and Deletion of Google User Data</h3>
         <p>We want to be transparent about how we handle the retention and deletion of Google user data:</p>
         <ul>
             <li><strong>Data Storage:</strong> As previously stated, all user-generated content and data remain stored in the user's own Google Drive. We do not store this data on our servers.</li>
             <li><strong>Data Retention:</strong> Since we do not store Google user data on our servers, we do not have a separate retention policy for this data. The data remains in your Google Drive account and is subject to Google's data retention policies.</li>
             <li><strong>Access Tokens:</strong> We retain OAuth 2.0 access tokens, which allow our application to interact with your Google Drive, only for as long as necessary to provide our Service. These tokens are automatically refreshed or expire based on Google's OAuth 2.0 protocol.</li>
             <li><strong>Data Deletion:</strong> As we do not store your Google user data, deletion of this data is controlled entirely by you through your Google account. You can delete your data at any time directly from your Google Drive.</li>
-            <li><strong>Account Deletion:</strong> If you choose to delete your account with our Service, we will immediately revoke our access to your Google Drive and delete any associated access tokens. This process does not affect the data in your Google Drive, which remains under your control.</li>
+            <li><strong>Revoking App Access:</strong> If you wish to stop using our Service, you can revoke our app's access to your Google Drive at any time through your Google Account settings. Once access is revoked, we will no longer be able to interact with your Google Drive data, and any associated access tokens will become invalid. This process does not affect the data in your Google Drive, which remains under your control.</li>
         </ul>
-        <p>You have full control over your Google user data. Our Service is designed to interact with this data only as necessary to provide functionality, and we do not retain copies of your data beyond the temporary access required for immediate operations.</p>
+        <p>You have full control over your Google user data and our app's access to it. Our Service is designed to interact with this data only as necessary to provide functionality, and we do not retain copies of your data beyond the temporary access required for immediate operations.</p>
 
         <h2>Contact Us</h2>
         <p>If you have any questions about this Privacy Policy, You can contact us:</p>
