--- a/index.html
+++ b/index.html
@@ -86,12 +86,10 @@
             <h1>BetFam</h1>
         </div>
     </header>
-
     <div class="container">
         <p class="tagline">Tea Farm Record Keeping App</p>
         
         <p>Streamline your tea farm management with BetFam, the comprehensive record-keeping solution designed for tea farmers.</p>
-
         <div class="features">
             <h2>Key Features:</h2>
             <ul>
@@ -102,14 +100,10 @@
                 <li>Cloud Storage: Securely store all data on each user's Google Drive.</li>
             </ul>
         </div>
-
         <p>BetFam simplifies tea farm operations, helping you make data-driven decisions to improve productivity and profitability. Whether you're managing a small plantation or a large estate, BetFam adapts to your needs, providing a user-friendly interface for efficient record-keeping.</p>
-
-        <a href="#" class="cta">Get Started with BetFam</a>
-
+        <a href="https://play.google.com/store/apps/details?id=com.betfam.apptea" class="cta">Get Started with BetFam</a>
         <p>Take control of your tea farm's data today with BetFam - your partner in cultivating success.</p>
     </div>
-
     <div class="footer">
         <a href="privacy.html">Privacy Statement</a> | <a href="terms.html">Terms and Conditions</a> | &copy; 2024 BetFam
     </div>
