--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
         <p>Take control of your tea farm's data today with BetFam - your partner in cultivating success.</p>
     </div>
     <div class="footer">
-        <a href="privacy.html">Privacy Statement</a> | <a href="terms.html">Terms and Conditions</a> | &copy; 2024 BetFam
-    </div>
+    <a href="privacy.html">Privacy Statement</a> | 
+    <a href="terms.html">Terms and Conditions</a> | 
+    <a href="contactus.html">Contact Us</a> | 
+    &copy; 2024 BetFam
+</div>
+
 </body>
 </html>
