--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="BetFam — Tea Farm Record‑Keeping App" />
   <meta property="og:description" content="Digitize your tea farm records, manage wages, and make data-driven decisions with charts and insights." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://betfam.example/" />
+  <meta property="og:url" content="https://betfamglobal.com" />
   <meta property="og:image" content="/assets/og-image.jpg" />
   <link rel="icon" href="/assets/favicon.png" />
   <style>
@@ -437,3 +437,4 @@
   </script>
 </body>
 </html>
+
