--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
   <nav class="nav">
     <div class="container nav-inner">
       <a class="brand" href="#home" aria-label="BetFam home">
-        <span class="logo" aria-hidden="true">🍃</span>
+        <img src="assets/logo2.jpg" alt="Betfam Logo" class="logo">
         <span>BetFam</span>
       </a>
       <div class="nav-links" aria-label="Main navigation">
@@ -437,4 +437,5 @@
   </script>
 </body>
 </html>
+
 
