--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
         <p class="muted"><span class="badge">New</span> Offline-first • Charts & Insights • Works on any Android device</p>
       </div>
       <div class="hero-card reveal" aria-hidden="true">
-        <div class="mock">App Screenshot Placeholder</div>
+        <div class="mock">
+    <img src="assets/logo2.jpg" alt="App Icon" class="app-icon">
+</div>
         <div class="divider"></div>
         <ul class="muted" style="margin:0; padding-left:1rem">
           <li>Daily green leaf entries</li>
@@ -437,5 +439,6 @@
   </script>
 </body>
 </html>
+
 
 
