--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
         --shadow: 0 10px 30px rgba(0,0,0,.45);
       }
     }
+    .mock {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.app-icon {
+    width: clamp(40px, 8vw, 100px);
+    height: clamp(40px, 8vw, 100px);
+    object-fit: contain;
+    border-radius: 8px;
+}
 
     *{box-sizing:border-box}
     html{scroll-behavior:smooth}
@@ -439,6 +451,7 @@
   </script>
 </body>
 </html>
+
 
 
 
