--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     });
 
     // Copy email helper
-    const EMAIL = 'hello@betfamglobal.com';
+    const EMAIL = 'kirui09@gmail.com';
     const copyBtn = document.getElementById('copyEmail');
     copyBtn?.addEventListener('click', async () => {
       try{
@@ -460,6 +460,7 @@
   </script>
 </body>
 </html>
+
 
 
 
